[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
url = "2.4"
robotstxt = "0.2"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
